--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,32 @@
     <groupId>WebDriverTraining</groupId>
     <artifactId>WebDriver</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
 
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.52.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.14</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.htmlelements</groupId>
+            <artifactId>htmlelements-all</artifactId>
+            <version>1.9</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
