--- a/test.properties
+++ b/test.properties
@@ -2,3 +2,4 @@ test.timeout=20
 test.baseURL=http://10.244.129.93
 test.searchURL=http://10.244.129.93/search
 test.disney=http://disney.co.uk/
+test.youifox=http://10.244.129.93
